[package]
name = "sx127x-lora"
version = "0.1.0"
edition = "2024"
authors = ["Jonathan D. Baker <jonathan@ardent.tech>"]
description = "A no-std driver for the LoRa modem on Semtech Sx127x chips."
keywords = ["embedded", "embedded-hal-driver", "lora"]
categories = ["embedded", "no-std"]
repository = "https://github.com/ardentTech/sx127x-lora"
license = "MIT OR Apache-2.0"
exclude = ["CHANGELOG.md", "examples/*"]
readme = "README.md"

[dependencies]
defmt = { version = "1.0.1", optional = true }
embedded-hal = { version = "1.0.0", optional = true }
embedded-hal-async = "1.0.0"
maybe-async = "0.2.10"
sx127x-common = { git = "https://github.com/ardentTech/sx127x-common.git" }

[dev-dependencies]
approx = "0.6.0-rc2"

[features]
default = []
defmt = ["dep:defmt"]
half_duplex = []
sync = ["maybe-async/is_sync", "dep:embedded-hal"]